--- a/pages/me/me.wxml
+++ b/pages/me/me.wxml
@@ -1,5 +1,12 @@
 <view class="container">
-    <import src="../../templates/"/>
+    <import src="../../templates/shopcell"/>
+    <block wx:for="{{shops}}" wx:for-item="shop" wx:key="*this">
+        <template is="{{shop}}"></template>
+    </block>
+
+    <import src="../../templates/placeholderview"/>
+    <template is="placeholderview" data="{{pagestate}}"></template>
+
     <!--底部tabbar-->
     <view class="tab-view">
         <block wx:for="{{tabNames}}" wx:key="*this">
