--- a/pages/me/me.wxss
+++ b/pages/me/me.wxss
@@ -1,58 +1,28 @@
 /* pages/me/me.wxss */
-
-.shops-view {
-    width: 70%;
-    height: 30px;
-    background-color: cadetblue;
-    overflow: scroll;
-    white-space: nowrap;
-    box-sizing: border-box;
-}
-
-.shops-view view {
-    width: 100rpx;
-    height: 100%;
-    display: flex;
-    align-items: center;
-    justify-content: center;
-    background-color: cornflowerblue;
-}
-
-.shops-view image {
-    width: 100rpx;
-    height: 80%;
-    flex: 1;
-}
-
-.shop-view {
-    height: 100%;
-    width: 30px;
-    background-color: yellowgreen;
-    float: left;
-    margin-left: 10px;
-}
+@import '../../templates/shopcell.wxss';
+@import '../../templates/placeholderview.wxss';
 
 .tab-view {
     width: 100%;
-    height: 100rpx;
+    height: 98rpx;
     position: fixed;
     bottom: 0;
     display: flex;
     flex-direction: row;
-    justify-content: center;
     align-items: center;
-    border-top:solid 1px #d1d3d4;
+    justify-content: center;
     background-color: white;
-    box-shadow: 0px -1px 3px black;
+    border-top:solid 1px #eaeaea;
 }
 
 .tab-item {
-    color: black;
     width: 100%;
     height: 100%;
+    font-size: 14px;
+    color: #444444;
     display: flex;
-    justify-content: center;
     align-items: center;
+    justify-content: center;
 }
 
 .tab-item.active {
