--- a/templates/commentphotosview.wxml
+++ b/templates/commentphotosview.wxml
@@ -3,8 +3,8 @@
 <template name="commentphotosview">
     <view class="comment-photos-view">
         <block wx:for="{{images}}" wx:key="*this">
-            <view class="photo-view">
-                <image class="photo-image" src="{{item}}"></image>
+            <view class="photo-view" catchtap="clickOnPhotoView" data-index="{{index}}">
+                <image class="photo-image" src="{{item}}" mode="aspectFill"></image>
                 <image catchtap="clickOnDeleteImageView" class="closing-image" src="../../resources/icon_close_photo.png" data-index="{{index}}"></image>
             </view>
         </block>
