--- a/templates/shopcommentcard.wxml
+++ b/templates/shopcommentcard.wxml
@@ -4,72 +4,72 @@
     <view class="shopcommentcard-view">
         <view class="content-view">
             <view class="avatar view-avatarplaceholder">
-                <image class="avatar" mode="aspectFill"></image>
+                <image class="avatar" mode="aspectFill" src="{{user && user.avatar ? user.avatar : ''}}"></image>
             </view>
             <view class="detail-view">
                 <view class="top-view">
-                    <view><text class="name-text">BAT Hugo</text>点赞了</view>
-                    5分钟前
+                    <view><text class="name-text">{{user.name}}</text>点赞了</view>
+                    {{date}}
                 </view>
                 <view class="service-view">
-                    iPhone手机快修服务
+                    {{service}}
                 </view>
                 <view class="score-view">
                     服务评分
                     <view class="stars-view">
                         <block wx:for="{{[1,2,3,4,5]}}" wx:key="*this">
-                            <image src="{{item <= 2.5 ? '../../resources/icon_star_big.png':'../../resources/icon_empty-star-big.png'}}" class="star-view"></image>
+                            <image src="{{item <= overall_score ? '../../resources/icon_star_big.png':'../../resources/icon_empty-star-big.png'}}" class="star-view"></image>
                         </block>
                     </view>
                 </view>
-                <view class="comment-view {{false?'':'limit-line'}}">
-                师傅很有礼貌打招呼并出示了证件，详细了解的故障情况及损坏原因，然后对手机进行外观和系统等方面全面检测，确定只是屏幕外屏损坏，直接换屏就OK了，
+                <view class="comment-view">
+                {{content}}
                 </view>
                 <view class="tags-view ">
-                    <block wx:for="{{['态度友善', '态度友善', '态度友善']}}" wx:key="*this">
-                        <view class="tag-view">{{item}}</view>
+                    <block wx:for="{{tags}}" wx:key="*this">
+                        <view class="tag-view">{{item.name}}</view>
                     </block>
                 </view>
-                <view class="photos-view" wx:if="{{photos&&photos.length>0}}">
-                    <block wx:if="{{photos.length==1}}">
+                <view class="photos-view" wx:if="{{images&&images.length>0}}">
+                    <block wx:if="{{images.length==1}}">
                         <view class="big-image-view view-allscreen view-imageplaceholder" catchtap="clickOnCommentPhotoView" data-index="{{0}}">
-                            <image class="view-allscreen" src="" mode="aspectFill"></image>
+                            <image class="view-allscreen" src="{{images[0]}}" mode="aspectFill"></image>
                         </view>
                     </block>
-                    <block wx:elif="{{photos.length==2}}">
+                    <block wx:elif="{{images.length==2}}">
                         <view class="left-image-view view-imageplaceholder" catchtap="clickOnCommentPhotoView" data-index="{{0}}">
-                            <image class="view-allscreen" src="" mode="aspectFill"></image>
+                            <image class="view-allscreen" src="{{images[0]}}" mode="aspectFill"></image>
                         </view>
                         <view class="hpadding-view"></view>
                         <view class="right-image-view view-imageplaceholder" catchtap="clickOnCommentPhotoView" data-index="{{1}}">
-                            <image class="view-allscreen" src="" mode="aspectFill"></image>
+                            <image class="view-allscreen" src="{{images[1]}}" mode="aspectFill"></image>
                         </view>
                     </block>
                     <block wx:else>
-                        <view class="bigleft-image-view view-imageplaceholder" catchtap="clickOnCommentPhotoView" data-index="{{1}}">
-                            <image class="view-allscreen"></image>
+                        <view class="bigleft-image-view view-imageplaceholder" catchtap="clickOnCommentPhotoView" data-index="{{0}}">
+                            <image class="view-allscreen" src="{{images[0]}}"></image>
                         </view>
                         <view class="hpadding-view"></view>
                         <view class="right-image-view">
                             <view class="top-image-view view-imageplaceholder" catchtap="clickOnCommentPhotoView" data-index="{{1}}">
-                                <image class="view-allscreen"></image>
+                                <image class="view-allscreen" src="{{images[1]}}"></image>
                             </view>
                             <view class="vpadding-view"></view>
                             <view class="bottom-image-view view-imageplaceholder" catchtap="clickOnCommentPhotoView" data-index="{{2}}">
-                                <image class="view-allscreen"></image>
+                                <image class="view-allscreen" src="{{images[2]}}"></image>
                                 <!--//{{photos.length>3}}-->
-                                <view wx:if="true" class="more-image-view view-allscreen" catchtap="clickOnCommentMorePhotosView" data-index="{{2}}">点击查看更多 >></view>
+                                <view wx:if="true" class="more-image-view view-allscreen">点击查看更多 >></view>
                             </view>
                         </view>
                     </block>
                 </view>
-                <view class="other-view">
+                <!--<view class="other-view">
                     <view class="up-view {{isFavorited?'active':''}}" catchtap="clickOnFavoriteView">
                         <image class="up-icon" src="{{isFavorited?'../../resources/icon_zan-red.png':'../../resources/icon_zan-empty.png'}}"></image>
                         5人赞
                     </view>
                     浏览30次数
-                </view>
+                </view>-->
             </view>
         </view>
     </view>
