--- a/templates/shopcommentcell.wxss
+++ b/templates/shopcommentcell.wxss
@@ -1,12 +1,22 @@
 .shop-comment-cell {
     width: 100%;
     display: flex;
+    flex-direction: column;
+    background-color: white;
+    box-sizing: border-box;
+    padding: 0 30rpx;
+}
+
+.shop-comment-cell .content-view {
+    width: 100%;
+    display: flex;
     flex-direction: row;
-    padding: 30rpx;
+    padding: 30rpx 0;
     box-sizing: border-box;
 }
 
 .shop-comment-cell .view-bottom-line {
+    width: 100%;
     border-bottom: solid 1rpx #eaeaea;
 }
 
@@ -58,10 +68,13 @@
     white-space: nowrap;
 }
 
+.shop-comment-cell .name-view {
+    margin-right: 20rpx;
+}
+
 .shop-comment-cell .stars-view {
     display: flex;
     flex-direction: row;
-    margin-left: 20rpx;
 }
 
 .shop-comment-cell .star-view {
@@ -128,7 +141,7 @@
     border-radius: 10rpx;
     overflow: hidden;
     position: relative;
-    margin-right: 10rpx;
+    margin-right: 15rpx;
 }
 
 .shop-comment-cell .photo-image {
@@ -141,9 +154,15 @@
     font-size: 11px;
     font-weight: 600;
     color: #ffffff;
-    background-color: rgba(0, 0, 0, 0.3);
+    background-color: rgba(0, 0, 0, 0.5);
     position: absolute;
     top: 0;
+    width: 100%;
+    height: 100%;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    border-radius: 10rpx;
 }
 
 .shop-comment-cell .bottom-view {
