--- a/templates/shoptagsview.wxss
+++ b/templates/shoptagsview.wxss
@@ -6,21 +6,21 @@
     flex-wrap: wrap;
     margin-right: 20rpx;
     box-sizing: border-box;
-    padding: 0 30rpx;
-    justify-content: center;
+    padding: 0 30rpx 10rpx 30rpx;
 }
 
 .shop-tags-view .tag-view {
     font-family: PingFangSC;
     font-size: 12px;
     color: #606567;
-    display: flex;
     align-items: center;
-    justify-content: center;
+    justify-content: space-between;
     padding: 0 25rpx;
     border-radius: 28rpx;
     height: 56rpx;
     border: solid 1rpx #606567;
+    display: flex;
+    flex-direction: row;
     margin: 0 19rpx 19rpx 0;
     min-width: 150rpx;
 }
