--- a/app.wxss
+++ b/app.wxss
@@ -3,15 +3,14 @@ page {
     width: 100%;
     height: 100%;
     box-sizing: border-box;
-    background-color: white;
+    background-color: #f2f2f2;
 }
 
 .container {
-  height: 100%;
   display: flex;
+  position: relative;
   flex-direction: column;
   box-sizing: border-box;
-  background-color: #f2f2f2;
 } 
 
 /*内容完全居中*/
