--- a/templates/placeholderview.wxss
+++ b/templates/placeholderview.wxss
@@ -3,12 +3,16 @@
     width: 100%;
     height: 100%;
     z-index: 999;
-    position: fixed;
-    background-color: white;
     display: flex;
+    position: fixed;
     flex-direction: column;
     align-items: center;
     justify-content: center;
+    background-color: white;
+}
+
+.placeholder-view .loading-text {
+    color: white;
 }
 
 .placeholder-view .loading-image {
