--- a/pages/me/me.wxss
+++ b/pages/me/me.wxss
@@ -1,18 +1,44 @@
 /* pages/me/me.wxss */
 @import '../../templates/shopcell.wxss';
-@import '../../templates/placeholderview.wxss';
+@import '../../templates/loadingmorecell.wxss';
+
+.top-view {
+    top: 0;
+    position: fixed;
+}
+
+.user-view {
+    width: 100%;
+    height: 120rpx;
+    display: flex;
+    flex-direction: row;
+    align-items: center;
+    background-color: lightblue;
+}
+
+.user-view .avatar-view {
+    margin-left: 20rpx;
+    width: 100rpx;
+    height: 100rpx;
+    border-radius: 50rpx;
+}
+
+.user-view .name-view {
+    color: black;
+    font-size: 20px;
+    margin-left: 20rpx;
+}
 
 .tab-view {
     width: 100%;
-    height: 98rpx;
-    position: fixed;
+    height: 68rpx;
     bottom: 0;
     display: flex;
     flex-direction: row;
     align-items: center;
     justify-content: center;
     background-color: white;
-    border-top:solid 1px #eaeaea;
+    border-bottom:solid 1px #eaeaea;
 }
 
 .tab-item {
