--- a/templates/shopcommentcell.wxss
+++ b/templates/shopcommentcell.wxss
@@ -173,7 +173,7 @@
     width: 100%;
     margin-top: 20rpx;
     display: flex;
-    flex-direction: row;
+    flex-direction: row-reverse;
     align-items: center;
     justify-content: space-between;
     font-family: PingFangSC;
