--- a/templates/shopdetailbottomview.wxml
+++ b/templates/shopdetailbottomview.wxml
@@ -1,17 +1,19 @@
 <!--店铺详情，底部操作页面-->
 <!--绑定的数据：
-isCollected: 是否已经收藏
+collected: 是否已经收藏
 collectionInfo: 收藏的人数情况-->
 
 <template name="shopdetailbottomview">
+
     <view class="shopdetail-bottom-view">
         <view class="me-view" catchtap="clickOnMeView">
             <image class="icon_me" src="../../resources/icon_user_black.png"></image>
             我的
         </view>
         <view class="collection-view" catchtap="clickOnCollectionView">
-            <image class="icon_collection" src="{{collected?'../../resources/icon_favorite.png':'../../resources/icon_favorite.png'}}"></image>
-            <text>{{collected?'收藏':'已收藏'}}</text>
+        
+            <image class="icon_collection" src="{{collected?'../../resources/icon_favorite.png':'../../resources/icon_no_favorite.png'}}"></image>
+            <text>{{collected?'已收藏':'收藏'}}</text>
             <text class="collectioninfo-text">{{collectionInfo}}</text>
         </view>
         <view class="telphone-view" catchtap="clickOnTelphoneView">
